--- a/index.html
+++ b/index.html
@@ -7,46 +7,34 @@
 </head>
 <body>
   <h1>Dom Events</h1>
+  <!-- mdn web docs is important what  is dom events -->
     <!-- option 1 for event handling  -->
+     <!-- https://web.programming-hero.com/web-11/video/web-11-26-0-basic-of-dom-all-in-one -->
 
+
+     <!-- which method is best for  event listener chatgpt   -->
+
+     <!-- different  on  click event Option1 inline handler  -->
   <button onclick="console.log(7)">Click Me</button>
+  <!-- must be write on single coat  -->
   <input onclick="console.log('click')" type="text">
   <!-- we use single cotation for  string   -->
-  <script src="js/event.js"></script>
 
    <br>
-  <!-- option 2for event handilng   -->
-   <button onclick="makeyellow()">Make Yellow </button>
+  <!-- option 2for event handilng  in javascript  file  -->
+   <button onclick="makeGreen()" >Make Green</button>
    <br> 
    <button onclick="makered()">Make Red</button>
+
+
+   <!-- option 3  getelementbyid -->
+   <br>
+     <button id="btn-purple">Make Purple</button>
   
-   <!-- option4 
-    <button id="btn-purple">Make Purple</button>
-
-
-    <script>
-      const Purple =  document.getElementById("btn-purple");
-      console.log(purple)
-    </script> -->
-
-
-
-
-
-
-
-  <!-- option 3 for event handling  -->
-   <!-- <br>
+  <!-- another option  -->
    <button id="btn-make-blue">Make blue</button>
-   <script>
-    const btnMakeBlue = document.getElementById('btn-make-bule');
-    // console.log(btnMakeBlue)
 
-    btnMakeBlue.onclick = function makeBlue(){
-      document.body.style.backgroundColor = 'blue';
-    }
-   </script> -->
-
+ 
   <!-- option 4 add event listener  -->
    <br>
   <button id="btn-make-green">Make Green</button>
@@ -54,27 +42,7 @@
   <button id="btn-make-gold">Make Gold</button>
   
 
-  <script>
-    // id diye access korbo //.addEventListener ('event type',handler)
-    document.getElementById('btn-make-green').addEventListener('click',function makeGreen(){
-      document.body.style.backgroundColor = 'green'
-    })
-
-    document.getElementById('btn-make-gold').addEventListener ('click',function(){
-      document.body.style.backgroundColor = 'gold'
-    })
-  </script>
-
-
-
-
-
-
-
-
-
-
-   
+ 
    <script src="js/event.js"></script>
 </body>
 </html>
