added many thing

--- a/bubble6.html
+++ b/bubble6.html
@@ -25,6 +25,8 @@
       border: 2px solid blue;
       margin: 5px;
     }
+
+    /* explore event bubble important mdn bolgs different stage of bubble  */
   </style>
 </head>
 
