--- a/comment333.html
+++ b/comment333.html
@@ -29,7 +29,9 @@
     <button id="comment-post">post</button>
   </section>
   <script>
-    document.getElementById('comment-post').addEventListener('click',function(){
+    document.getElementById('comment-post').addEventListener
+    // anonymus function 
+    ('click',function(){
       // console.log('cick yaaaa')
       const commentBox = document.getElementById('text-box');
       const newCommentBox = commentBox.value;
