--- a/delegate7.html
+++ b/delegate7.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Delegate</title>
+  <!-- //explore event dlelgate why,how,why it is useful -->
+
+  <!-- https://web.programming-hero.com/web-11/video/web-11-26-10-basic-js-events-all-in-one -->
+   <!-- What is a callback function in javascript? (google it) -->
 </head>
 <body>
   <h1>Explore delegate</h1>
