--- a/more-event4.html
+++ b/more-event4.html
@@ -40,9 +40,12 @@
     //   console.log('user done with  email')
     // })
     document.getElementById('user-name')
+    // explore it important 
     .addEventListener('keyup',function(event){
       console.log('typing', event.target.value)
     })
+
+    // now go to github-delete .  
   </script>
 </body>
 </html>
