--- a/github-delete5.html
+++ b/github-delete5.html
@@ -13,7 +13,7 @@
     document.getElementById("input-delete")
     .addEventListener('keyup',function(event){
         const text = event.target.value
-        const btnDelete = document.getElementById('input-delete');
+        const btnDelete = document.getElementById('btn-delete');
         console.log('user is typing',text)
         if (text === 'delete'){
           console.log('delete typed')
@@ -26,8 +26,6 @@
           console.log('something else is typed')
           btnDelete.setAttribute('disabled',true);
           // attribute set korar  jonno duita man lage 
-
-        
         }
     })
   </script>
